--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,5 +1,26 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        here is the about page. <br />
+        <strong>{{ boldmessage }}</strong><br />        
+    </div>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
+        <br />
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
+    </div> 
+{% endblock %}
+
+<!--
 <!DOCTYPE html>
-{% load staticfiles %} <!-- New Line-->
+{% load staticfiles %}
 
 <html>
 
@@ -22,3 +43,4 @@
     </body>
 
 </html>
+-->
