--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,3 +1,29 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add a Page
+{% endblock %}
+
+{% block body_block %}
+    <h1>Add a page to {{ category.name }}</h1>
+    <div>
+        <form id="add_page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
+            {% csrf_token %}
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
+            {% endfor %}
+            <input type="submit" name="submit" value="Add Page" />                
+        </form>
+{% endblock %}
+
+<!--
 <!DOCTYPE html>
 <html>
     <head>
@@ -23,3 +49,4 @@
         </div>
     </body>
 </html>
+-->
