--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,5 +1,61 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Homepage
+{% endblock %}
+
+{% block body_block %}
+    <h1>Rango says...</h1> 
+    <div>
+        hey there partner! <br />
+        <strong>{{ boldmessage }}</strong>
+    </div>
+
+    <div>
+        <h2>Most Liked Categories</h2>
+    </div>
+
+    <div>
+    {% if categories %}
+        <ul>
+        {% for category in categories %}
+            <li>
+                <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
+            </li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <strong>There are no categories present.</strong>
+    {% endif %}
+    </div>
+
+    <div>
+        <h2>Most Viewed Pages</h2>
+    </div>
+
+    <div>
+    {% if pages %}
+        <ul>
+        {% for page in pages %}
+            <li>
+                <a href="{{ page.url }}">{{ page.title }}</a>
+            </li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <strong>There are no pages present.</strong>
+    {% endif %}
+    </div>
+
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
+    </div>
+{% endblock %}
+
+<!--
 <!DOCTYPE html>
-{% load staticfiles %} <!-- New Line-->
+{% load staticfiles %} 
 
 <html>
 
@@ -51,10 +107,11 @@
         </div>
 
         <div>
-            <a href="/rango/about/">About Rango</a><br />
+            <a href="/rango/about/">About</a><br />
             <a href="/rango/add_category/">Add a New Category</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
         </div> 
     </body>
 
 </html>
+-->
