--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,6 +11,11 @@
         here is the about page. <br />
         <strong>{{ boldmessage }}</strong><br />        
     </div>
+
+    <div>
+        <p>Visits: {{ visits }}</p>
+    </div>
+
     <div>
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> 
         <br />
